--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,21 +2,11 @@
   box-sizing: border-box;
 }
 
-.main-grid {
-  display: grid;
-  max-width: 890px;
-  gap: 50px;
-  margin: 50px auto;
-}
-.main-grid .hero-grid, .main-grid .grid {
-  display: grid;
+img {
+  width: 100%;
 }
 
-.hero-grid {
-  grid-template-columns: 1fr 1fr;
-  gap: 50px;
-}
-.hero-grid .title {
+.title {
   border: 1px solid black;
   display: flex;
   justify-content: center;
@@ -24,18 +14,27 @@
 }
 
 .grid {
-  grid-template-columns: repeat(5, 1fr);
-  gap: 35px;
+  display: grid;
+  max-width: 890px;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 48px 35px;
+  margin: 50px auto;
 }
-.grid :nth-child(3) {
+.grid :nth-child(1), .grid :nth-child(2) {
+  grid-column: span 5;
+}
+.grid :nth-child(3), .grid :nth-child(4), .grid :nth-child(6), .grid :nth-child(8), .grid :nth-child(9), .grid :nth-child(10) {
   grid-column: span 2;
-  grid-row: span 2;
 }
 .grid :nth-child(5) {
-  grid-column: span 2;
+  grid-column: span 4;
+  grid-row: span 2;
+}
+.grid :nth-child(7) {
+  grid-column: span 4;
 }
 .grid :last-child {
-  grid-column: span 3;
+  grid-column: span 6;
 }
 
 /*# sourceMappingURL=styles.css.map */
