--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,45 +2,42 @@
     box-sizing: border-box;
 }
 
-.main-grid {
-    display: grid;
-    max-width: 890px;
-    gap: 50px;
-    margin: 50px auto;
-
-    .hero-grid, .grid {
-        display: grid;
-    }
+img {
+    width: 100%;
 }
 
-
-.hero-grid {
-    grid-template-columns: 1fr 1fr;
-    gap: 50px;
-
-    .title {
-        border: 1px solid black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+.title {
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
 
 .grid {
-    grid-template-columns: repeat(5, 1fr);
-    gap: 35px;
+    display: grid;
+    max-width: 890px;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 48px 35px;
+    margin: 50px auto;
 
-    :nth-child(3) {
+    :nth-child(1), :nth-child(2) {
+        grid-column: span 5;
+    }
+
+    :nth-child(3), :nth-child(4), :nth-child(6), :nth-child(8), :nth-child(9), :nth-child(10) {
         grid-column: span 2;
-        grid-row: span 2;
     }
 
     :nth-child(5) {
-        grid-column: span 2;
+        grid-column: span 4;
+        grid-row: span 2;
+    }
+    
+    :nth-child(7) {
+        grid-column: span 4;
     }
 
     :last-child {
-        grid-column: span 3;
+        grid-column: span 6;
     }
 }
